--- a/portfolio.html
+++ b/portfolio.html
@@ -20,26 +20,28 @@
 
 <body>
   <!-- Top of the page -->
-  <header class="header-wrap">
+  <header class="header">
     <div class="container">
-      <nav class="nav-list">
-        <a href="./index.html" class="webstudio"><span class="blue-studio">Web</span>Studio</a>
-        <ul class="links-list">
-          <li><a href="./index.html" class="social-links">Agencja</a></li>
-          <li><a href="./portfolio.html" class="social-links current nav-link">Portfolio</a></li>
-          <li><a href="#" class="social-links">Kontakt</a></li>
+      <nav class="header__nav">
+        <a href="./index.html" class="logo"><span class="logo--blue">Web</span>Studio</a>
+        <ul class="header__links">
+          <li><a href="./index.html" class="header__socials">Agencja</a>
+          </li>
+          <li><a href="./portfolio.html"
+              class="header__socials header__links--nav-blue header__links--is-active">Portfolio</a></li>
+          <li><a href="#" class="header__socials">Kontakt</a></li>
         </ul>
         <div>
-          <ul class="contact-list contact-box">
-            <li class="envelope-box">
-              <a href="mailto:info@devstudio.com" class="social-links contact-links"><svg width="16" height="12"
-                  class="envelope-icon">
+          <ul class="header__contact">
+            <li class="header__icon-box">
+              <a href="mailto:info@devstudio.com" class="header__socials header__contact-links"><svg width="16"
+                  height="12" class="header__icon">
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>info@devstudio.com</a>
             </li>
-            <li class="smartphone-box">
-              <a href="tel:+48111111111" class="social-links contact-links"><svg width="10" height="16"
-                  class="smartphone-icon">
+            <li class="header__icon-box">
+              <a href="tel:+48111111111" class="header__socials header__contact-links"><svg width="10" height="16"
+                  class="header__icon">
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>+48 111 111 111</a>
             </li>
@@ -49,6 +51,7 @@
     </div>
   </header>
 
+
   <!-- End top of the page -->
 
   <main>
@@ -56,158 +59,158 @@
     <section class="section">
       <h1 class="visually-hidden">Something to hide</h1>
       <div class="container">
-        <ul class="filters-list">
-          <li><button type="button" class="filters">Wszystkie</button></li>
-          <li><button type="button" class="filters">Strony</button></li>
-          <li><button type="button" class="filters">Aplikacje</button></li>
-          <li><button type="button" class="filters">Design</button></li>
-          <li><button type="button" class="filters">Marketing</button></li>
+        <ul class="filters">
+          <li><button type="button" class="filters__button">Wszystkie</button></li>
+          <li><button type="button" class="filters__button">Strony</button></li>
+          <li><button type="button" class="filters__button">Aplikacje</button></li>
+          <li><button type="button" class="filters__button">Design</button></li>
+          <li><button type="button" class="filters__button">Marketing</button></li>
         </ul>
         <!-- End button section -->
 
         <!-- Projects section -->
-        <ul class="project-list">
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+        <ul class="projects">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/Technocrack.jpg" alt="Website" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Technocrack</h3>
-                <p class="project-categories">Strona internetowa</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Technocrack</h3>
+                <p class="projects__category">Strona internetowa</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/GrafikaNewOrleanVsGoldenStar.jpg" alt="Basketball players" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Grafika New Orlean vs Golden Star</h3>
-                <p class="project-categories">Design</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Grafika New Orlean vs Golden Star</h3>
+                <p class="projects__category">Design</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/RestauracjaSeafood.jpg" alt="Seafood restaurant logo" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Restauracja Seafood</h3>
-                <p class="project-categories">Aplikacja</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Restauracja Seafood</h3>
+                <p class="projects__category">Aplikacja</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/ProjektPrime.jpg" alt="Headphones" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Project Prime</h3>
-                <p class="project-categories">Marketing</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Project Prime</h3>
+                <p class="projects__category">Marketing</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/ProjektBoxes.jpg" alt="Boxes" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Project Boxes</h3>
-                <p class="project-categories">Aplikacja</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Project Boxes</h3>
+                <p class="projects__category">Aplikacja</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/InspirationHasNoBorders.jpg" alt="Website" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Inspiration has no borders</h3>
-                <p class="project-categories">Strona internetowa</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Inspiration has no borders</h3>
+                <p class="projects__category">Strona internetowa</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/MagazynLimitedEdition.jpg" alt="Design oriented magazine" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Magazyn Limited Edition</h3>
-                <p class="project-categories">Design</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Magazyn Limited Edition</h3>
+                <p class="projects__category">Design</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/ProjektLAB.jpg" alt="Labels" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Projekt LAB</h3>
-                <p class="project-categories">Marketing</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Projekt LAB</h3>
+                <p class="projects__category">Marketing</p>
               </div>
             </a>
           </li>
-          <li class="project-cards">
-            <a href="#" class="project-link">
-              <div class="project-box-overlay">
+          <li>
+            <a href="#" class="projects__link">
+              <div class="projects__box-overlay">
                 <img src="./images/GrowingBusiness.jpg" alt="Growing Business Website" width="370" />
-                <div class="project-overlay">
+                <div class="projects__overlay">
                   <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy
                     wykorzystują tę platformę
                     do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji.</p>
                 </div>
               </div>
-              <div class="project-box">
-                <h3 class="project-names">Growing Business</h3>
-                <p class="project-categories">Aplikacja</p>
+              <div class="projects__box">
+                <h3 class="projects__name">Growing Business</h3>
+                <p class="projects__category">Aplikacja</p>
               </div>
             </a>
           </li>
@@ -220,55 +223,57 @@
     <!-- Footer -->
     <div class="container">
       <div>
-        <a href="index.html" class="webstudio footer-logo"><span class="blue-studio">Web</span><span
-            class="white-studio">Studio</span></a>
+        <a href="index.html" class="logo footer-logo"><span class="logo--blue">Web</span><span
+            class="logo--white">Studio</span></a>
         <address>
-          <ul class="footer-list">
-            <li class="footer-list-item">
-              <a href="https://goo.gl/maps/FoN4GqAtt9caBdG7A" target="_blank" class="map-link footer-social-links">m.
+          <ul class="footer__list">
+            <li class="footer__item">
+              <a href="https://goo.gl/maps/FoN4GqAtt9caBdG7A" target="_blank"
+                class="footer__social-link footer__social-link--map">m.
                 Warszawa, Aleje Jerozolimskie 21</a>
             </li>
-            <li class="footer-list-item">
-              <a href="mailto:info@devstudio.com" class="gray-social-links footer-social-links">info@devstudio.com</a>
+            <li class="footer__item">
+              <a href="mailto:info@devstudio.com"
+                class="footer__social-link footer__social-link--gray">info@devstudio.com</a>
             </li>
-            <li class="footer-list-item">
-              <a href="tel:+48111111111" class="gray-social-links footer-social-links">+48 111 111 111</a>
+            <li class="footer__item">
+              <a href="tel:+48111111111" class="footer__social-link footer__social-link--gray">+48 111 111 111</a>
             </li>
           </ul>
         </address>
       </div>
-      <div class="footer-button-section">
+      <div class="footer-button">
         <p>Dołącz do nas</p>
-        <ul class="footer-button-list">
+        <ul class="footer-button__list">
           <li class="footer-button-item">
-            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+            <a href="#" class="footer-button__link"><svg height="20" width="20" class="footer-button__button">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg></a>
           </li>
-          <li class="footer-button-item">
-            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+          <li class="footer-button__item">
+            <a href="#" class="footer-button__link"><svg height="20" width="20" class="footer-button__button">
                 <use href="./images/icons.svg#icon-twitter-1"></use>
               </svg></a>
           </li>
-          <li class="footer-button-item">
-            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+          <li class="footer-button__item">
+            <a href="#" class="footer-button__link"><svg height="20" width="20" class="footer-button__button">
                 <use href="./images/icons.svg#icon-facebook-1"></use>
               </svg></a>
           </li>
-          <li class="footer-button-item">
-            <a href="#" class="footer-button-link"><svg height="20" width="20" class="footer-button">
+          <li class="footer-button__item">
+            <a href="#" class="footer-button__link"><svg height="20" width="20" class="footer-button__button">
                 <use href="./images/icons.svg#icon-linkedin-1"></use>
               </svg></a>
           </li>
         </ul>
       </div>
-      <form class="newsletter-section">
+      <form class="newsletter">
         <label>
           Zapisz się do newslettera
         </label>
-        <div class="newsletter-boxes">
+        <div class="newsletter__box">
           <input type="email" name="email" placeholder="E-mail" />
-          <button type="submit" class="newsletter-button">Zapisz się<svg width="24" height="24">
+          <button type="submit" class="newsletter__button">Zapisz się<svg width="24" height="24">
               <use href="./images/icons.svg#icon-airplane"></use>
             </svg></button>
         </div>
