--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <!-- End Google Fonts links -->
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" />
-  <link rel="stylesheet" href="./css/styles.css" />
+  <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
+  <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
 <body>
@@ -311,27 +312,27 @@
                 <use href="./images/icons.svg#icon-client-1"></use>
               </svg></a>
           </li>
-          <li class="client-item">
+          <li class="clients__item">
             <a href="#" class="clients__icon-link"><svg width="106" height="60" class="clients__icon">
                 <use href="./images/icons.svg#icon-client-2"></use>
               </svg></a>
           </li>
-          <li class="client-item">
+          <li class="clients__item">
             <a href="#" class="clients__icon-link"><svg width="106" height="60" class="clients__icon">
                 <use href="./images/icons.svg#icon-client-3"></use>
               </svg></a>
           </li>
-          <li class="client-item">
+          <li class="clients__item">
             <a href="#" class="clients__icon-link"><svg width="106" height="60" class="clients__icon">
                 <use href="./images/icons.svg#icon-client-4"></use>
               </svg></a>
           </li>
-          <li class="client-item">
+          <li class="clients__item">
             <a href="#" class="clients__icon-link"><svg width="106" height="60" class="clients__icon">
                 <use href="./images/icons.svg#icon-client-5"></use>
               </svg></a>
           </li>
-          <li class="client-item">
+          <li class="clients__item">
             <a href="#" class="clients__icon-link"><svg width="106" height="60" class="clients__icon">
                 <use href="./images/icons.svg#icon-client-6"></use>
               </svg></a>
@@ -367,7 +368,7 @@
       <div class="footer-button">
         <p>Dołącz do nas</p>
         <ul class="footer-button__list">
-          <li class="footer-button-item">
+          <li class="footer-button__item">
             <a href="#" class="footer-button__link"><svg height="20" width="20" class="footer-button__button">
                 <use href="./images/icons.svg#icon-instagram-2"></use>
               </svg></a>
