--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
           </div>
           <div class="modal__policy">
             <label class="check option">
-              <input class="check__input" type="checkbox">
+              <input class="check__input" type="checkbox" value="accept-rules">
               <span class="check__box"></span>
               <span class="modal__policy-statement">
                 Oświadczam, iż akceptuję <a href="#" target="_blank" class="modal__policy-rules--link"> Regulamin</a> i
